--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>We at <a href="https://www.instagram.com/nfnlabs/">NFN Labs</a> meet every Friday to talk about stuff we think everyone should know.</p>
         <p>We try to keep ourselves constantly updated.</p>
         <p>
-            This is an attempt to minimise the time taken to make slides for thier <a href="https://www.instagram.com/explore/tags/nfnfridaytalks/">friday talks</a>
+            This is an attempt to minimise the time taken to make slides for their <a href="https://www.instagram.com/explore/tags/nfnfridaytalks/">friday talks</a>
         </p>
         <p></p>
     </div>
